--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="script.js"></script>
   <title>Beer Review</title>
 </head>
 <body>
@@ -36,11 +35,11 @@
             placeholder="Category">
           </input>
         </div>
-        <button class="btn btn-primary post-beer">Post</button>
+        <button class="btn btn-primary post-beer" type="button">Post</button>
       </form>
       
     </div>
   </div>
-
+<script src="script.js"></script>
 </body>
 </html>
